--- a/main.html
+++ b/main.html
@@ -28,11 +28,16 @@
             return response.json();
           })
           .then((data) => {
-            find_lines(data);
-            let northTrains = data.upcoming_trips.north;
-            let southTrains = data.upcoming_trips.south;
-            get_Trains(northTrains,line,"North");
-            get_Trains(southTrains,line,"South");
+            if (lines.length == 0) {
+              console.log('empty')
+              find_lines(data);
+            } else {
+              let northTrains = data.upcoming_trips.north;
+              let southTrains = data.upcoming_trips.south;
+              console.log(southTrains);
+              get_Trains(northTrains,line,"North");
+              get_Trains(southTrains,line,"South");
+            }
           })
       }
 
@@ -89,7 +94,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: black;
+        <!-- background-color: black; -->
         height: 40vh;
         width: 80%;
         flex-wrap: wrap;
@@ -99,7 +104,9 @@
         background-color: lightgrey;
         flex: 1;
         text-align: center;
-        margin: 10px;
+        <!-- margin: 10px; -->
+        padding: 5px;
+        border: 10px solid black;
         <!-- width: 60%; -->
 
       }
