--- a/main.html
+++ b/main.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<hmtl lang="en">
+<html lang="en">
   <head>
     <script src="app.js"> </script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="stations">
-      <select id="stations" name="stations">
-        <option value="A32">West 4th</option>
-        <option value="134">Houston</option>
-        <option value="L08">Bedford</option>
-        <option value="117">116th</option>
-        <option value="G22">Court Square</option>
-        <!-- <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button> -->
+    <div class="container">
+      <div class="stations item">
+        <select id="stations" name="stations">
+          <option value="A32">West 4th</option>
+          <option value="134">Houston</option>
+          <option value="L08">Bedford</option>
+          <option value="117">116th</option>
+          <option value="G22">Court Square</option>
+          <!-- <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button> -->
+          </select>
+      </div>
+      <div class="button item">
+        <select id="lines" name="lines">
+          <!-- <option value="A">A</option>
+          <option value="C">C</option>
+          <option value="E">E</option> -->
         </select>
-    </div>
-    <div class="trains">
-      <select id="lines" name="lines">
-        <!-- <option value="A">A</option>
-        <option value="C">C</option>
-        <option value="E">E</option> -->
-      </select>
-      <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button>
-      <ul id="train_times">
-      </ul>
+        <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button>
+      </div>
+      <div class="trains item"
+        <ul id="train_times" class="item">
+        </ul>
+      </div>
     </div>
   </body>
 </hmtl>
