Add Some Stations

--- a/main.html
+++ b/main.html
@@ -14,14 +14,13 @@
           <option value="L08">Bedford</option>
           <option value="117">116th</option>
           <option value="G22">Court Square</option>
+          <option value="A51">Broadway Junction</option>
+          <option value="G28">Nassau</option>
           <!-- <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button> -->
           </select>
       </div>
       <div class="button item">
         <select id="lines" name="lines">
-          <!-- <option value="A">A</option>
-          <option value="C">C</option>
-          <option value="E">E</option> -->
         </select>
         <button id="button" onClick="getTrainTimes(api_url)">Load Lines</button>
       </div>
