--- a/main.html
+++ b/main.html
@@ -11,14 +11,16 @@
       </div>
       <div class="stations item">
         <select id="stations" name="stations">
-          <option value="A32">West 4th</option>
-          <option value="134">Houston</option>
-          <option value="L08">Bedford</option>
           <option value="117">116th</option>
-          <option value="G22">Court Square</option>
+          <option value="L08">Bedford</option>
           <option value="A51">Broadway Junction</option>
+          <option value="G22">Court Square</option>
+          <option value="134">Houston</option>
+          <option value="233">Hoyt Street</option>
           <option value="G28">Nassau</option>
-          </select>
+          <option value="A32">West 4th</option>
+          <option value="F18">York Street</option>
+        </select>
       </div>
       <div class="button item">
         <select id="lines" name="lines">
